# OTUS_HW6

./: Makefile  README.md  pyproject.toml
src/otus_hw6/domain/: models.py  repositories.py  services.py  unit_of_work.py
src/otus_hw6/infrastructure/: orm.py  repositories.py  unit_of_work.py
tests/: conftest.py
tests/test_domain/: fakes.py  test_models.py  test_services.py
tests/test_infrastructure/: sqlite_queries.py  test_orm.py  test_repositories.py  test_unit_of_work.py
