[project]
name = "otus-hw6"
version = "0.1.0"
description = ""
authors = [
    {name = "PleaseMePython",email = "Please.Me.Python@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.39,<3.0.0)"
]

[tool.poetry]
packages = [{include = "otus_hw6", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.ruff]
# Allow lines to be as long as 79.
line-length = 79

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
